added CSS to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,11 +13,6 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      
-      <!-- Student code goes here -->
-    </main>
-
-    <footer>
       <p>
         <section class="card" id="html-section">
           <h2>HTML</h2>
@@ -48,6 +44,10 @@
       </ul>
         </section>
       </p>
+      <!-- Student code goes here -->
+    </main>
+
+    <footer>
       <p>I can code!</p>
     </footer>
   </body>
