--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -21,6 +21,10 @@
        <li>The head element contains the information about the webpage.</li>
        <li>The body element represents the visible content shown to the user.</li>
      </ul>
+     <ul>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+    </ul>
         </section>
      
         <section class="card" id="css-section">
