--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -30,7 +30,8 @@
         <section class="card" id="css-section">
             <h2>CSS</h2>
       <ul>
-        <li>Enter your CSS notes here</li>
+        <li>A margin indicates how much space we want around the outside of an element</li>
+        <li>A padding indicates how much space we want around the content inside an element</li>
       </ul>
         </section>
      
@@ -45,7 +46,8 @@
         <section class="card" id="javascript-section">
           <h2>JavaScript</h2>
       <ul>
-        <li>text goes here</li>
+        <li>A variable is a named container that allows us to store data in our code</li>
+        <li>Control flow is the order in which a computer executes the code in a script</li>
       </ul>
         </section>
       </p>
